# markdown-editor

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: app.rs  lib.rs  main.css  main.rs
src/components/: app.rs  button.rs  default_layout.rs  mod.rs  raw_html.rs
src/components/editor/: action_bar.rs  action_button.rs  edit_section.rs  mod.rs
src/components/editor/action_button/: bold.rs  heading.rs  image.rs  italic.rs  link.rs  mod.rs  quote.rs  redo.rs  strikethrough.rs  table.rs  undo.rs
src/components/modal/: mod.rs  modal_button.rs
src/components/nav_bar/: file_name.rs  mod.rs  save_button.rs  setting_button.rs  toggle_button.rs
src/components/nav_bar/creates/: create_button.rs  mod.rs  open_recent.rs  upload_button.rs
src/components/nav_bar/saves/: mod.rs  save_html.rs  save_markdown.rs
src/components/preview_window/: mod.rs
src/components/ui/: default_layout.rs  mod.rs  nav_bar.rs
src/components/ui/editor/: action_bar.rs  mod.rs
src/components/ui/nav_bar/: create_button.rs  mod.rs  save_button.rs  setting_button.rs  toggle_button.rs
src/contexts/: config_context.rs  file_context.rs  markdown_context.rs  markdown_history.rs  mod.rs  theme_context.rs
src/hooks/: mod.rs  use_applied_theme.rs
src/pages/: home.rs  mod.rs  setting.rs
src/pages/setting/: mod.rs  theme_choosing_form.rs  theme_setting.rs
src/utils/: convert_to_html.rs  icons.rs  mod.rs
