[package]
name = "markdown-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
markdown = "1.0.0-alpha.16"
yew-autoprops = "0.4.1"
serde_json = "1.0"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1.3"
yew-router = "0.18.0"
regex = "1.10.4"

[dependencies.yew]
version = "0.21.0"
features = ["csr"]

[dependencies.web-sys]
version = "0.3.67"
features = [
    "HtmlAnchorElement",
    "HtmlDocument",
    "StyleSheetList",
    "StyleSheet"
]

[profile.release]
lto = true
opt-level = "s"
